Can not scroll the scrollbar when the mouse is over the blank area.
Happened in the xp sp3 ie7/win7 ie10. If scroll the mouse over the blank area, the scrollbar will not move. See the example 'text-content.html' I committed.
Also you can find the scenario at http://jsfiddle.net/crocodile/TAkhM/15/
and http://jsfiddle.net/crocodile/TAkhM/16/

Add an 'background-image: url("about:blank")' to solve this problem.

--- a/src/perfect-scrollbar.css
+++ b/src/perfect-scrollbar.css
@@ -1,3 +1,6 @@
+.ps-container.ie {
+    background-image: url('about:blank');/*fixed for ie and no extra connection introduced. see http://jsfiddle.net/crocodile/TAkhM/15/*/
+}
 .ps-container.ie6 > *, .ps-container.ie7 > * {
     zoom: 1; /* fixed hasLayout problem in ie7 */
 }
