$el.outerHeight() or outerWidth() retrive an incorrect value
This make the contentWidth or contentHeight has an smaller value. And produce an longer scrollbar.
This is happening in xp sp3 ie7. This is perhaps caused by the 'hasLayout' problem. Add 'zoom:1' to the first child will solve the problem.

--- a/src/perfect-scrollbar.css
+++ b/src/perfect-scrollbar.css
@@ -1,3 +1,6 @@
+.ps-container.ie6 > *, .ps-container.ie7 > * {
+    zoom: 1; /* fixed hasLayout problem in ie7 */
+}
 .ps-container .ps-scrollbar-x {
     position: absolute; /* please don't change 'position' */
     bottom: 3px; /* there must be 'bottom' for ps-scrollbar-x */
