--- a/src/perfect-scrollbar.css
+++ b/src/perfect-scrollbar.css
@@ -13,12 +13,14 @@
     transition: opacity .2s linear;
 }
 
-.ps-container:hover .ps-scrollbar-x {
+.ps-container:hover .ps-scrollbar-x,
+.ps-container.hover .ps-scrollbar-x {
     opacity: 0.6;
     filter: alpha(opacity = 60);
 }
 
-.ps-container .ps-scrollbar-x:hover {
+.ps-container .ps-scrollbar-x:hover,
+.ps-container .ps-scrollbar-x.hover {
     opacity: 0.9;
     filter: alpha(opacity = 90);
     cursor:default;
@@ -44,12 +46,14 @@
     transition: opacity .2s linear;
 }
 
-.ps-container:hover .ps-scrollbar-y {
+.ps-container:hover .ps-scrollbar-y,
+.ps-container.hover .ps-scrollbar-y {
     opacity: 0.6;
     filter: alpha(opacity = 60);
 }
 
-.ps-container .ps-scrollbar-y:hover {
+.ps-container .ps-scrollbar-y:hover ,
+.ps-container .ps-scrollbar-y.hover {
     opacity: 0.9;
     filter: alpha(opacity = 90);
     cursor: default;
