Fixed the scrollbar position for xp sp3 ie6
The bottom of scrollbar-x and the right of scollbar-y just keep the static value 3px.

--- a/src/perfect-scrollbar.css
+++ b/src/perfect-scrollbar.css
@@ -19,6 +19,9 @@
     -moz-transition: opacity .2s linear;
     transition: opacity .2s linear;
 }
+.ps-container.ie6 .ps-scrollbar-x {
+    bottom: 3px !important; /* fixed for ie6 */
+}
 
 .ps-container:hover .ps-scrollbar-x,
 .ps-container.hover .ps-scrollbar-x {
@@ -52,6 +55,9 @@
     -webkit-transition: opacity.2s linear;
     -moz-transition: opacity .2s linear;
     transition: opacity .2s linear;
+}
+.ps-container.ie6 .ps-scrollbar-y {
+    right: 3px !important; /* fixed for ie6 */
 }
 
 .ps-container:hover .ps-scrollbar-y,
